--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login UI Using Flexbox</title>
     <link rel="stylesheet" href="index.css">
+    <!-- Google Icons -->
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
@@ -27,21 +28,16 @@
                 <input type="checkbox" id="checkbox" />
                 <p>Remember Me?</p>
             </div>
-
             <button type="submit" id="submit-button">Submit</button>
-
-
-
             <div class="row">
                 <p>Or Register:</p>
-
             </div>
             <div class="row">
                 <p id="register-link"><a href="#">Register</a></p>
             </div>
-
         </div>
     </div>
+    <!-- Wave Background -->
     <script src="three.r134.min.js"></script>
     <script src="vanta.waves.min.js"></script>
     <script>
@@ -56,7 +52,7 @@
             scaleMobile: 1.00,
             color: 0x5f88,
             shininess: 40.00,
-            waveHeight: 20.00,
+            waveHeight: 15.00,
             waveSpeed: 0.5,
             zoom: 0.65
         })
