Small edit to submit button

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body id="body">
     <div class="container">
         <div class="login-container">
-            <h1>LOGIN</h1>
+            <h1>Login</h1>
             <div class="row input-row">
                 <span class="material-symbols-outlined icon">person</span>
                 <input class="input-field" placeholder="Username" type="text" />
